# cr-gym

./: .gitignore  README.md  pyproject.toml
clash_royale_gymnasium/: __init__.py
clash_royale_gymnasium/actions/: __init__.py  masking.py  spaces.py
clash_royale_gymnasium/env/: __init__.py  clash_env.py
clash_royale_gymnasium/league/: __init__.py  match.py  player_slot.py  tournament.py
clash_royale_gymnasium/reporting/: __init__.py  pdf_report.py  tracker.py
clash_royale_gymnasium/rewards/: __init__.py  base.py  components.py  default.py
clash_royale_gymnasium/types/: __init__.py  actions.py  observations.py  reward_context.py
clash_royale_gymnasium/utils/: __init__.py  encoder.py
examples/: 01_env_quickstart.py  02_league_training_loop.py  03_league_report.py
tests/: test_gymnasium.py  test_tracker.py
